# resolve

./: .gitignore  README.md  pyproject.toml
examples/: feature_analysis.ipynb  neural_process_prediction.ipynb  neural_process_training.ipynb
examples/binary-black-hole/: compas_to_hdf.ipynb  settings.yaml  tsne_h5_workflow.ipynb  umap.ipynb
examples/legend/: settings.yaml
resolve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
resolve/conditional_neural_process/: __init__.py  conditional_neural_process_model.py  data_generator.py  data_utils.py  training_wrapper.py
resolve/helpers/: __init__.py  data_generator.py  dataloader_manager.py  dataset.py  feature_analysis.py  iterable_dataset.py  losses.py  model_manager.py  model_visualizer.py  normalizer.py  sampler.py  splitter.py  training_wrapper.py
resolve/hierarchically_conditioned_attentive_neural_process/: __init__.py  data_generator copy.py  data_generator.py  hc_attn_neural_process_model.py  hc_context_attn_neural_process_model.py  hc_context_aware_target_attn_latent_neural_process_model.py  hc_context_aware_target_attn_neural_process_model.py  hc_target_aware_context_attn_neural_process_model.py  isolation_forrest.py  losses.py  training_wrapper.py  training_wrapper_compact.py  zarr_helper.py
resolve/multi_fidelity_gaussian_process/: multi_fidelity_visualizer.py
resolve/network_architectures/: __init__.py  autoencoder.py  conditional_neural_process_model.py  hc_context_aware_target_attn_latent_neural_process_model.py  hc_context_aware_target_attn_neural_process_model.py  isolation_forest.py  (+2 more)
(+44 files in other folders)
